# menu_tree

./: .env  Makefile  README.md  docker-compose.yml  pyproject.toml
menu_tree_web/: Dockerfile
menu_tree_web/core/: asgi.py  settings.py  urls.py
menu_tree_web/menu/: admin.py  models.py  views.py
menu_tree_web/menu/migrations/: 0001_initial.py
menu_tree_web/menu/templates/menu/: about.html  base.html  careers.html  home.html  menu.html  our_team.html
menu_tree_web/menu/templatetags/: menu_tags.py
